added pages section about section articles

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -16,7 +16,7 @@
         </div>
         <div class="provided-services">
             <!-- Article 1 -->
-             <article class="service-1">
+             <article class="service">
                 <div class="Service-title">
                     <span>Mexant Financial Planning</span>
                 <span class="icon">
@@ -29,21 +29,25 @@
 We do not ask you anything in return. You are free to use our templates for any purpose.</p>
             </article>
             <!-- Article 2 -->
-             <!-- <article>
+              <article class="service">
+                <div class="Service-title">
                 <span>Mexant Crypto Investing</span>
-                <p class="service-Description">Mexant HTML5 Template is available to download 100% free of charge. This CSS layout is based on Boostrap 5 framework.
-
-Anyone can edit and use this layout for all professional websites. Thank you for visiting TemplateMo website.</p>
-            </article> -->
+                <span class="icon">
+                      <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                
+            </article>
             <!-- Article 3 -->
-             <!-- <article>
+             <article class="service">
+                <div class="Service-title">
                 <span>Cryptocurrency Investments</span>
-                <p class="service-Description">Ut dictum vehicula massa, ac pharetra leo tincidunt eu. Phasellus in tristique magna, ac gravida leo.
-
-Integer sed lorem sapien. Ut viverra mauris sed lobortis commodo. Mauris scelerisque venenatis justo, sed interdum sem.
-
-</p>
-            </article> -->
+                <span class="icon">
+                      <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                
+            </article>
         </div>
 
     </div>
