added about page heading

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -10,6 +10,14 @@
 
 </head>
 <body>
+    <div class="about-heading">
+        <div class="container">
+            <div class="heading-text">
+                <h2>About Us</h2>
+            </div>
+            <div class="line"></div>
+        </div>
+    </div>
     <div class=" container about-container">
         <div class="left-img">
             <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/about-left-image.jpg" alt="image1">
