added About Page section call to actions

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -59,6 +59,18 @@ We do not ask you anything in return. You are free to use our templates for any 
         </div>
 
     </div>
+    <!-- Call To Actions -->
+     <div class="call-to-action">
+        <div class="container">
+            <div class="call-to-actions-infor">
+                <h4>Business <em>Solutions</em> <br>and <strong>Crypto</strong><br> Investments</h4>
+            </div>
+            <div class="call-to-actions-btns">
+                <button class="discover">Discover More</button>
+                <a href="#contact">Contact Us</a>
+            </div>
+        </div>
+     </div>
     
 </body>
 </html>
