--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AFNAAN</title>
+    <!-- font-awesome link -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -34,5 +36,145 @@
       <a href="#" class="btn btn-orange">Contact Us</a>
     </div>
   </section>
+  <!-- services section  -->
+   <section class=" container services-container">
+        <!-- CSS service -->
+        <div class="service-box">
+            <i class="fas fa-archive"></i>
+            <div class="service-infor">
+                <h4>CSS Templates</h4>
+                <p class="service-description">
+                    TemplateMo website is the best for you to explore and<br> download free website templates.
+                </p>
+            </div>
+        </div>
+        <!-- html webpage service -->
+         
+        <!-- Responisive Designs -->
+         <div class="service-box">
+            <i class="fas fa-cloud"></i>
+            <div class="service-infor">
+                <h4>HTML5 Web Pages</h4>
+                <p class="service-description">
+                    Templates are based on Bootstrap 5 CSS framework. You can easily adapt or modify based on your needs.
+                </p>
+            </div>
+        </div>
+        <!-- Mobile and Tablet service -->
+         <div class="service-box">
+            <i class="fas fa-charging-station"></i>
+            <div class="service-infor">
+                <h4>Responsive Designs</h4>
+                <p class="service-description">
+                   All of our CSS templates are 100% free to use for commercial or business websites.
+
+
+                </p>
+            </div>
+        </div>
+        <!-- Fast Customer Support -->
+         <div class="service-box">
+            <i class="fas fa-suitcase"></i>
+            <div class="service-infor">
+                <h4>Mobile and Tablet ready!</h4>
+                <p class="service-description">
+                    TemplateMo website is the best for you to explore and<br> download free website templates.
+                </p>
+            </div>
+        </div>
+        <!-- Fast Customer support -->
+     <div class="service-box">
+            <i class="fas fa-archway"></i>
+            <div class="service-infor">
+                <h4>Fast Customer Support
+</h4>
+                <p class="service-description">
+                  Do not be hesitated to contact us if you have any question or concern about our templates.
+                </p>
+            </div>
+        </div>
+        <!-- Fully custom -->
+         <div class="service-box">
+            <i class="fas fa-puzzle-piece"></i>
+            <div class="service-infor">
+                <h4>Fully Customizable</h4>
+                <p class="service-description">
+                   If you have any idea or suggestion about new templates, feel free to let us know.
+                </p>
+            </div>
+        </div>
+      </section>
+    <!-- call to actions html -->
+  <section class="call-to-action">
+        <div class="container">
+            <div class="call-to-actions-infor">
+                <h4>Business <em>Solutions</em> <br>and <strong>Crypto</strong><br> Investments</h4>
+            </div>
+            <div class="call-to-actions-btns">
+                <button class="discover">Discover More</button>
+                <a href="#contact">Contact Us</a>
+            </div>
+        </div>
+      </section>
+      <!-- About Us Section -->
+         <section class="about-us">
+    <h4 class="subtitle">ABOUT US</h4>
+    <h1 class="title">Know Us Better</h1>
+
+    <div class="tabs">
+      <button class="tab active">Web Design</button>
+      <button class="tab">Graphics</button>
+      <button class="tab">Web Coding</button>
+    </div>
+
+    <div class="content-container">
+      <div class="table-section">
+        <table>
+          <thead>
+            <tr>
+              <th>Project Title</th>
+              <th>Budget</th>
+              <th>Deadline</th>
+              <th>Client</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="project">Website Redesign</td>
+              <td>$1,500 to $2,200</td>
+              <td>2022 Dec 12</td>
+              <td>Web Biz</td>
+            </tr>
+            <tr>
+              <td class="project">Website Renovation</td>
+              <td>$2,500 to $3,600</td>
+              <td>2022 Dec 10</td>
+              <td>Online Ads</td>
+            </tr>
+            <tr>
+              <td class="project">Marketing Plan</td>
+              <td>$2,500 to $4,200</td>
+              <td>2022 Dec 8</td>
+              <td>Web Biz</td>
+            </tr>
+            <tr>
+              <td class="project">All-new Website</td>
+              <td>$3,000 to $6,600</td>
+              <td>2022 Dec 2</td>
+              <td>Web Presence</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="info-box">
+        <h3>Please tell us about your idea<br>and how you want it to be</h3>
+        <p>You are allowed to use this template for your websites. You are <strong>NOT allowed</strong> to redistribute the template ZIP file on any other template websites.</p>
+        <p>Thank you for downloading and using our templates. Please tell your friends about our website.</p>
+        <button class="discover-btn">Discover More</button>
+      </div>
+    </div>
+  </section>
+    
 </body>
 </html>
