--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
       </section>
       <!-- About Us Section -->
-         <section class="about-us">
+  <section class="about-us">
     <h4 class="subtitle">ABOUT US</h4>
     <h1 class="title">Know Us Better</h1>
 
@@ -174,6 +174,37 @@
         <button class="discover-btn">Discover More</button>
       </div>
     </div>
+  </section>
+<!-- calculator section -->
+  <section class="calculator">
+    <div class="container">
+      <!-- left image -->
+         <div class="image-box">
+      <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/calculator-image.png" alt="Business Woman" />
+    </div>
+       <div class="form-box">
+      <h4 class="subtitle">YOUR FREEDOM</h4>
+      <h1 class="title">Get A Financial Plan</h1>
+      <form>
+        <div class="input-row">
+          <input type="text" placeholder="Your Name" />
+          <input type="email" placeholder="Your Email" />
+        </div>
+        <input type="text" placeholder="Subject" />
+        <select>
+          <option>Choose an Option</option>
+          <option>Investment</option>
+          <option>Loan</option>
+          <option>Saving</option>
+        </select>
+        <button type="submit">Submit Now</button>
+      </form>
+    </div>
+    </div>
+     <!-- <div class="image-box">
+      <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/calculator-bg.jpg" alt="Business Woman" />
+    </div>  -->
+   
   </section>
     
 </body>
