--- a/index.html
+++ b/index.html
@@ -201,10 +201,28 @@
       </form>
     </div>
     </div>
-     <!-- <div class="image-box">
-      <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/calculator-bg.jpg" alt="Business Woman" />
-    </div>  -->
-   
+  </section>
+    <!-- testimonials section -->
+    <section class="testimonial-section">
+    <div class="section-header">
+      <span class="small-title">TESTIMONIALS</span>
+      <h2>What They Say</h2>
+    </div>
+
+    <div class="testimonial-card">
+      <div class="testimonial-content">
+        <div class="quote-icon">❝</div>
+        <p class="message">
+          "Etiam id ligula risus. Fusce fringilla nisi nunc, nec rutrum lectus cursus nec.
+          In blandit nibh dolor, et rutrum leo accumsan porta."
+        </p>
+        <h4 class="name">Abdurizak ziyaad</h4>
+        <span class="position">CTO of Af-naan</span>
+      </div>
+      <div class="testimonial-image">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROSKP0JDdTpbwNOO25y0t2Zc0g6u-9sLlh9yAxidBgG_7081rn96nRUHyOvOOouoGex-Y&usqp=CAU" alt="sawirka">
+      </div>
+    </div>
   </section>
     
 </body>
