--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
     <li><a href="#"> home </a></li>
     <li><a href="#"> service </a></li>
     <li><a href="#"> about </a></li>
-    <li><a href="#"> pages </a></li>
+    <!-- <li><a href="#"> pages </a></li> -->
+<ul class="menu">
+  <li class="dropdown">
+    <a href="#">Pages ▾</a>
+    <ul class="submenu">
+      <li><a href="./Pages/about.html">About Us</a></li>
+      <li><a href="./Pages/ourservices.html">Contact Us</a></li>
+      <li><a href="./Pages/contactus.html">Our Services</a></li>
+    </ul>
+  </li>
+</ul>
+
     <li><a href="#"> testimonials </a></li>
   </ul>
  <button class="btn btn-menus">contect suport</button>
