--- a/Pages/about.html
+++ b/Pages/about.html
@@ -10,6 +10,33 @@
 
 </head>
 <body>
+    <!-- header menu -->
+     <header> 
+     <nav class="container desktop">
+      <div class="logo"> <img src="logo 3.png" alt="logo">
+   <h1>AFNAA<span>N</span></h1></div>
+  <ul class="link-menus">
+    <li><a href="../index.html"> home </a></li>
+    <li><a href="#"> service </a></li>
+    <li><a href="#"> about </a></li>
+    <!-- <li><a href="#"> pages </a></li> -->
+<ul class="menu">
+  <li class="dropdown">
+    <a href="#">Pages ▾</a>
+    <ul class="submenu">
+      <li><a href="./about.html">About Us</a></li>
+      <li><a href="./ourservices.html">Contact Us</a></li>
+      <li><a href="./contactus.html">Our Services</a></li>
+    </ul>
+  </li>
+</ul>
+
+    <li><a href="#"> testimonials </a></li>
+  </ul>
+ <button class="btn btn-menus">contect suport</button>
+     </nav>
+
+</header>
     <div class="about-heading">
         <div class="container">
             <div class="heading-text">
