--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
   </section>
   <!-- services section  -->
-   <section class=" container services-container">
+  <div class=" container services-container">
         <!-- CSS service -->
         <div class="service-box">
             <i class="fas fa-archive"></i>
@@ -114,7 +114,7 @@
                 </p>
             </div>
         </div>
-      </section>
+    </div>
     <!-- call to actions html -->
   <section class="call-to-action">
         <div class="container">
