modified menu of all pages

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,32 +11,39 @@
 </head>
 <body>
     <!-- header menu -->
-     <header> 
-     <nav class="container desktop">
-      <div class="logo"> <img src="logo 3.png" alt="logo">
-   <h1>AFNAA<span>N</span></h1></div>
-  <ul class="link-menus">
-    <li><a href="../index.html"> home </a></li>
-    <li><a href="#"> service </a></li>
-    <li><a href="#"> about </a></li>
-    <!-- <li><a href="#"> pages </a></li> -->
-<ul class="menu">
+    <header>
+    <div class="container">
+  <nav class="main-nav">
+  <!-- ***** Logo start ***** -->
+ <div class="logo-img">
+    <a href="index.html" class="logo">
+    <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/logo.png" alt="logo-img"></a>
+ </div>
+  <ul class="nav-links">
+   <li><a href="../index.html">Home</a></li>
+
+    <li><a href="#About">About</a></li>
+       <li><a href="Services">Services</a></li>
+   <ul class="menu">
   <li class="dropdown">
     <a href="#">Pages ▾</a>
     <ul class="submenu">
-      <li><a href="./about.html">About Us</a></li>
-      <li><a href="./ourservices.html">Contact Us</a></li>
-      <li><a href="./contactus.html">Our Services</a></li>
+      <li><a href="../Pages/about.html">About Us</a></li>
+      <li><a href="../Pages/contactus.html">Contact Us</a></li>
+      <li><a href="../Pages/ourservices.html">Our Services</a></li>
     </ul>
   </li>
 </ul>
+    <li><a href="#Testimonials"> Testimonials</a></li>
+    <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
+    </ul>
+                    
+</nav>
+</div>
 
-    <li><a href="#"> testimonials </a></li>
-  </ul>
- <button class="btn btn-menus">contect suport</button>
-     </nav>
 
 </header>
+
     <div class="about-heading">
         <div class="container">
             <div class="heading-text">
@@ -87,7 +94,7 @@ We do not ask you anything in return. You are free to use our templates for any 
 
     </div>
     <!-- Call To Actions -->
-     <div class="call-to-action">
+     <section class="call-to-action">
         <div class="container">
             <div class="call-to-actions-infor">
                 <h4>Business <em>Solutions</em> <br>and <strong>Crypto</strong><br> Investments</h4>
@@ -97,7 +104,7 @@ We do not ask you anything in return. You are free to use our templates for any 
                 <a href="#contact">Contact Us</a>
             </div>
         </div>
-     </div>
+      </section>
 
      <!-- Steps To Do -->
       <section class="steps-to-do">
@@ -105,7 +112,7 @@ We do not ask you anything in return. You are free to use our templates for any 
           <div class="left-contents">
             <div class="left-contents-infor">
                 <h4>Please tell us about your idea and how<br>you want it to be</h4>
-            <p>If you need more HTML templates, you can try visiting TooCSS blog and Tooplate websites. You can get many good templates on those websites.<br><br>Nulla non placerat neque, a gravida elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi sed dolor condimentum tellus commodo volutpat non malesuada turpis.</p>
+            <p>If you need more HTML templates.you can try visiting TooCSS blog and Tooplate websites.<br> You can get many good templates on those websites.<br>Nulla non placerat neque, a gravida elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi sed dolor condimentum tellus commodo volutpat non malesuada turpis.</p>
             </div>
             
             <div class="discover-btn">
