--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    
-    <!-- desktop menu -->
-<header> 
-     <nav class="container desktop">
-      <div class="logo"> <img src="logo 3.png" alt="logo">
-   <h1>AFNAA<span>N</span></h1></div>
-  <ul class="link-menus">
-    <li><a href="#"> home </a></li>
-    <li><a href="#"> service </a></li>
-    <li><a href="#"> about </a></li>
-    <!-- <li><a href="#"> pages </a></li> -->
-<ul class="menu">
+  
+
+<header>
+<div class="container">
+  <nav class="main-nav">
+  <!-- ***** Logo start ***** -->
+ <div class="logo-img">
+    <a href="index.html" class="logo">
+    <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/logo.png" alt="logo-img"></a>
+ </div>
+  <ul class="nav-links">
+   <li><a href="#Home"> Home</a></li>
+   <li><a href="Services">Services</a></li>
+    <li><a href="#About">About</a></li>
+   <ul class="menu">
   <li class="dropdown">
     <a href="#">Pages ▾</a>
     <ul class="submenu">
@@ -30,13 +33,16 @@
     </ul>
   </li>
 </ul>
+    <li><a href="#Testimonials"> Testimonials</a></li>
+    <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
+    </ul>
+                    
+</nav>
+</div>
 
-    <li><a href="#"> testimonials </a></li>
-  </ul>
- <button class="btn btn-menus">contect suport</button>
-     </nav>
 
 </header>
+
 
      <!-- section -->
        <section class="hero">
@@ -48,7 +54,7 @@
     </div>
   </section>
   <!-- services section  -->
-  <div class=" container services-container">
+ <div class=" container services-container">
         <!-- CSS service -->
         <div class="service-box">
             <i class="fas fa-archive"></i>
