--- a/Pages/contactus.html
+++ b/Pages/contactus.html
@@ -9,30 +9,36 @@
 </head>
 <body>
        <!-- header menu -->
-     <header> 
-     <nav class="container desktop">
-      <div class="logo"> <img src="logo 3.png" alt="logo">
-   <h1>AFNAA<span>N</span></h1></div>
-  <ul class="link-menus">
-    <li><a href="../index.html"> home </a></li>
-    <li><a href="#"> service </a></li>
-    <li><a href="#"> about </a></li>
-    <!-- <li><a href="#"> pages </a></li> -->
-<ul class="menu">
+       <header>
+    <div class="container">
+  <nav class="main-nav">
+  <!-- ***** Logo start ***** -->
+ <div class="logo-img">
+    <a href="index.html" class="logo">
+    <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/logo.png" alt="logo-img"></a>
+ </div>
+  <ul class="nav-links">
+   <li><a href="../index.html">Home</a></li>
+
+    <li><a href="#About">About</a></li>
+       <li><a href="Services">Services</a></li>
+   <ul class="menu">
   <li class="dropdown">
     <a href="#">Pages ▾</a>
     <ul class="submenu">
-      <li><a href="./about.html">About Us</a></li>
-      <li><a href="./ourservices.html">Contact Us</a></li>
-      <li><a href="./contactus.html">Our Services</a></li>
+      <li><a href="../Pages/about.html">About Us</a></li>
+      <li><a href="../Pages/contactus.html">Contact Us</a></li>
+      <li><a href="../Pages/ourservices.html">Our Services</a></li>
     </ul>
   </li>
 </ul>
+    <li><a href="#Testimonials"> Testimonials</a></li>
+    <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
+    </ul>
+                    
+</nav>
+</div>
 
-    <li><a href="#"> testimonials </a></li>
-  </ul>
- <button class="btn btn-menus">contect suport</button>
-     </nav>
 
 </header>
     <!-- Contact us heading -->
