added Responsive Design of partners and footer section to abaut us ,contact us and our services pages

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/logo.png" alt="logo-img"></a>
  </div>
   <ul class="nav-links">
-   <li><a href="#Home"> Home</a></li>
-   <li><a href="Services">Services</a></li>
+   <li><a href="#Home">Home</a></li>
+   <li><a href="#Services">Services</a></li>
     <li><a href="#About">About</a></li>
    <ul class="menu">
   <li class="dropdown">
@@ -33,7 +33,7 @@
     </ul>
   </li>
 </ul>
-    <li><a href="#Testimonials"> Testimonials</a></li>
+    <li><a href="#testimonials">Testimonials</a></li>
     <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
     </ul>
                     
@@ -45,7 +45,7 @@
 
 
      <!-- section -->
-       <section class="hero">
+       <section class="hero" id="Home">
     <div class="hero-content">
       <h1>Get <span>ready</span> for your business<br>&amp; upgrade <span>all aspects</span></h1>
       <p>Mexant HTML5 Template is provided for free of charge. Based on Bootstrap 5 CSS framework.</p>
@@ -54,7 +54,7 @@
     </div>
   </section>
   <!-- services section  -->
- <div class=" container services-container">
+ <div class="container services-container" id="Services">
         <!-- CSS service -->
         <div class="service-box">
             <i class="fas fa-archive"></i>
@@ -134,7 +134,7 @@
         </div>
       </section>
       <!-- About Us Section -->
-  <section class="about-us">
+  <section class="about-us" id="About">
     <h4 class="subtitle">ABOUT US</h4>
     <h1 class="title">Know Us Better</h1>
 
@@ -220,7 +220,7 @@
     </div>
   </section>
     <!-- testimonials section -->
-    <section class="testimonial-section">
+    <section class="testimonial-section" id="testimonials">
     <div class="section-header">
       <span class="small-title">TESTIMONIALS</span>
       <h2>What They Say</h2>
