--- a/Pages/contactus.html
+++ b/Pages/contactus.html
@@ -20,8 +20,8 @@
   <ul class="nav-links">
    <li><a href="../index.html">Home</a></li>
 
-    <li><a href="#About">About</a></li>
-       <li><a href="Services">Services</a></li>
+    <li><a href="../index.html">About</a></li>
+       <li><a href="../index.html">Services</a></li>
    <ul class="menu">
   <li class="dropdown">
     <a href="#">Pages ▾</a>
@@ -32,7 +32,7 @@
     </ul>
   </li>
 </ul>
-    <li><a href="#Testimonials"> Testimonials</a></li>
+    <li><a href="../index.html"> Testimonials</a></li>
     <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
     </ul>
                     
