--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="home.css">
 </head>
-<body>
-  
 
+<body>
 <header>
 <div class="container">
   <nav class="main-nav">
@@ -39,12 +38,42 @@
                     
 </nav>
 </div>
+<!-- Mobile-menu -->
+  <nav class="mobile-nav">
+  <!-- ***** Logo start ***** -->
+ <div class="logo-img">
+    <a href="index.html" class="logo">
+    <img src="https://templatemo.com/templates/templatemo_574_mexant/assets/images/logo.png" alt="logo-img"></a>
+ </div>
+  <ul class="nav-links">
+   <li><a href="#Home">Home</a></li>
+   <li><a href="#Services">Services</a></li>
+    <li><a href="#About">About</a></li>
+   <ul class="menu">
+  <li class="dropdown">
+    <a href="#">Pages ▾</a>
+    <ul class="submenu">
+      <li><a href="./Pages/about.html">About Us</a></li>
+      <li><a href="./Pages/ourservices.html">Contact Us</a></li>
+      <li><a href="./Pages/contactus.html">Our Services</a></li>
+    </ul>
+  </li>
+</ul>
+    <li><a href="#testimonials">Testimonials</a></li>
+    </ul>
+ 
+</nav>
+ <div class="hamburger">
+             <i class="fa-solid fa-bars" data-visible="true"></i> 
+            <i class="fa-solid fa-close" data-visible="false"></i>
+        </div>
+
 
 
 </header>
 
 
-     <!-- section -->
+     <!--  hero section -->
        <section class="hero" id="Home">
     <div class="hero-content">
       <h1>Get <span>ready</span> for your business<br>&amp; upgrade <span>all aspects</span></h1>
