--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   </li>
 </ul>
     <li><a href="#testimonials">Testimonials</a></li>
-    <li><a href="contact-us.html" class="contact-us">Contact Support</a></li>
+     <li><a href="./Pages/contactus.html" class="contact-us">Contact Support</a></li> 
+
     </ul>
                     
 </nav>
