--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <a href="#">Pages ▾</a>
     <ul class="submenu">
       <li><a href="./Pages/about.html">About Us</a></li>
-      <li><a href="./Pages/ourservices.html">Contact Us</a></li>
-      <li><a href="./Pages/contactus.html">Our Services</a></li>
+      <li><a href="./Pages/contactus.html">Contact Us</a></li>
+      <li><a href="./Pages/ourservices.html">Our Services</a></li>
     </ul>
   </li>
 </ul>
